<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meme_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dinosilvestro.mememaker.ui.MemeEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorIcon"/>

    <RelativeLayout
        android:id="@+id/meme_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/meme_edit_image_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/meme_edit_image_content_description"
            android:scaleType="centerCrop"
            tools:src="@drawable/com_facebook_button_like_background"/>

        <TextView
            android:id="@+id/top_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/meme_edit_image_view"
            android:layout_alignStart="@+id/meme_edit_image_view"
            android:layout_alignTop="@+id/meme_edit_image_view"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimaryText"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:textAllCaps="true"
            android:textColor="@color/colorIcon"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/bottom_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/meme_edit_image_view"
            android:layout_alignEnd="@+id/meme_edit_image_view"
            android:layout_alignStart="@+id/meme_edit_image_view"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimaryText"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:textAllCaps="true"
            android:textColor="@color/colorIcon"
            android:textSize="32sp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/top_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:hint="@string/top_text_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/bottom_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:hint="@string/bottom_text_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_edit_text"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_meme_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@drawable/ic_save_black_24dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"/>

</android.support.constraint.ConstraintLayout>
